--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": "^15.14.0",
     "nodemon": "^2.0.7",
     "pug": "^3.0.2",
-    "router": "^1.3.5"
+    "router": "^1.3.5",
+    "svelte": "^3.37.0"
   }
 }
