--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
+    "http": "*",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.3",
     "node": "^15.14.0",
