--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http": "*",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.3",
     "node": "^15.14.0",
     "nodemon": "^2.0.7",
     "pug": "^3.0.2",
-    "router": "^1.3.5"
+    "router": "^1.3.5",
+    "svelte": "^3.37.0",
+    "typescript": "^4.2.4"
   }
 }
